这是李鹏博的修改

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="./1.png" alt="" class="img1">
                 <div class="a2">
                     <p>计算设备及饮件</p>
-                    <p>商家介绍商家介绍商家介绍商家介绍商家介绍商家介绍</p>
+                    <p>商家介绍商家介绍商家介绍商家介绍商家介绍商家介绍1111111</p>
                 </div>
                 
             </div>
